# NumberSlangTranslate

./: README.md  package.xml
mypkg/: package.xml
mypkg/scripts/: slang_pub.py  slang_sub.py
scripts/: slang_pub.py  slang_sub.py
