<?xml version="1.0"?>
<package format="2">
  <name>mypkg</name>
  <version>0.0.0</version>
  <description>NumberSlangTranslate</description>

  <maintainer>Akifumi Takagi</maintainer>
  <author>Akifumi Takagi</author>
  <author>Ryuichi Ueda</author>

  <license>GPLv3</license>

  <url type="repository">https://github.com/karata-sc/NumberSlangTranslate</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
